--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 	<version>1.0-SNAPSHOT</version>
 	<description> Application which simply greets the user</description>
 	<dependencies>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.8.21</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
